--- a/package.json
+++ b/package.json
@@ -14,9 +14,29 @@
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
+    "@tailwindcss/vite": "^4.1.7",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^13.2.0",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.26.0",
+    "lucide-vue-next": "^0.511.0",
     "nuxt": "^3.17.3",
+    "reka-ui": "^2.2.1",
+    "shadcn-nuxt": "^2.1.0",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.24.4"
+  },
+  "devDependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@pinia/nuxt": "^0.11.0",
+    "typescript": "^5.8.3",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
