--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nuxt": "^3.17.3",
     "reka-ui": "^2.3.1",
     "shadcn-nuxt": "^2.1.0",
+    "sweetalert2": "^11.22.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "tw-animate-css": "^1.3.0",
