--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
     "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/vue-table": "^8.21.3",
     "@vee-validate/zod": "^4.15.0",
-    "@vueuse/core": "^13.6.0",
+    "@vueuse/core": "^13.7.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
