--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@internationalized/date": "^3.9.0",
     "@nuxt/eslint": "^1.3.1",
     "@nuxt/fonts": "^0.11.4",
     "@nuxt/icon": "^1.12.0",
