--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.7",
     "tw-animate-css": "^1.3.0",
+    "v-money3": "^3.24.1",
     "vee-validate": "^4.15.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
