--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@eslint/js": "^9.27.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.11.0",
+    "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "eslint": "^9.27.0",
