--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-vue-next": "^0.511.0",
     "nuxt": "^3.17.3",
     "reka-ui": "^2.5.0",
@@ -46,6 +50,7 @@
     "@eslint/js": "^9.27.0",
     "@nuxtjs/google-fonts": "^3.2.0",
     "@pinia/nuxt": "^0.11.0",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
